--- a/sass/partials/_blog-page.scss
+++ b/sass/partials/_blog-page.scss
@@ -4,6 +4,7 @@
 
 	&__main {
 		width: 100%;
+		margin-bottom: $end-of-content-margin + 4rem;;
 	}
 
 	&__image {
